--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "world's smallest spreadsheet",
   "main": "index.js",
   "scripts": {
-    "postinstall": "browserify /client/js/app.js -o /client/js/bundle.js",
+    "postinstall": "mkdir -p public/js; browserify client/js/app.js > public/js/bundle.js",
     "start": "node index.js",
     "build": "mkdir -p public/js; browserify client/js/app.js > public/js/bundle.js",
     "watch": "watchify client/js/app.js -o public/js/bundle.js",
